[gd_scene load_steps=2 format=3 uid="uid://cqnvvwacmjve1"]

[ext_resource type="Script" uid="uid://eudcak7eov1g" path="res://Cenas/Enemie/Bosses/MegaGhost/Parts/part.gd" id="1_ijm23"]

[node name="Part" type="Node2D" node_paths=PackedStringArray("random_dir_timer")]
script = ExtResource("1_ijm23")
random_dir_timer = NodePath("Timer")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="end_split_attack" from="." to="." method="_end_split_attack"]
[connection signal="timeout" from="Timer" to="." method="_random_dir"]
